--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,20 @@
 
     <dependencies>
 
+        <!--mapStruct依赖-->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-jdk8</artifactId>
+            <version>1.2.0.CR1</version>
+
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.2.0.CR1</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!--添加tomcat依赖模块.-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
